Added Wordpress Theme Comment
Wordpress theme comment is added in the style.scss (safe comment of
course) in case you are creating a Wordpress theme.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,13 @@
 /*!
+Theme Name: THEME_NAME
+Theme URI: http://DOMAIN_NAME.com/
+Author: YOUR_NAME
+Author URI: http://ryantvenge.com/
+Description: DESCRIPTION_OF_THEME
+Version: 1.0
+*/
+
+/*!
  * Ryan Tvenge
  * Dependencies:
  *     HTML5 Boilerplate
