--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -2,15 +2,16 @@
  * Colors
  */ 
 
-$primary: blue;
-$secondary: green;
+$primary: #006666;
+$secondary: #cc6600;
+$mainColorType: #666;
 
 /*
  * Grid
  */ 
 
 $gridBottomSpace: 2%;
-$gridSideSpace: 2%;
+$gridSideSpace: 3%;
 $gridPaddedRowSpace: 2%;
 
 /*
