--- a/scss/formee-structure.scss
+++ b/scss/formee-structure.scss
@@ -1,6 +1,6 @@
 ﻿/********************************************************************
 
-Project: Formee - http://www.formeeee.org
+Project: Formee - http://wwwformee.org
 Launched: 
 Version: 3.1
 Authors: Bernard De Luna - http://www.bernarddeluna.com
@@ -14,7 +14,7 @@ Structure
 /* Little CSS Reset to preserv form structure */
 
 /* fix  ff bugs */
-.formee:after, .formee div:after, .formee ol:after, .formee ul:after, .formee li:after, .formee dl:after {
+form:after, form div:after, form ol:after, form ul:after, form li:after, form dl:after {
 	content:".";
 	display:block;
 	clear:both;
@@ -24,115 +24,74 @@ Structure
 }
 
 /* Form Structure */
-
-.formee {margin:0;padding:0;}
-.formee fieldset {
-	border: 1px solid #d4d4d4;
-	position: relative;
-	height:100%;
-	padding: 1.2em 0;
-	margin: 0 0 4em;
+form {
+	margin:0;
+	padding:0;
 }
-.formee legend {
-	margin-left:1%;
-	margin-right:1%;
-	padding: 0.5% 0.5% 0.8%;
-}
-.formee h3 {
-	margin:2em 1% .8%;
-	padding: 0.5% 0.5% 0.8%;
-}
-
-/* Field Grid */
-.grid-1-12, .grid-2-12, .grid-3-12, .grid-4-12, .grid-5-12, .grid-6-12, .grid-7-12, .grid-8-12, .grid-9-12, .grid-10-12, .grid-11-12, .grid-12-12 {
-	display:inline-block;
-	position:relative;
-	float:left;
-	margin-left:1%;
-	margin-right:1%;
-	padding: 0.8% 0.5% 1%;
-	height:100%;
-/*ie7*/
-*margin-left:.8%;
-*margin-right:.8%;
-*padding: 0.8% 0.25% 1%;
-}
-
-/* 12-column Grid (thanks for Fluid 960 Grid System) */
-.grid-1-12 {width: 5.333%;}
-.grid-2-12 {width: 13.666%;}
-.grid-3-12 {width: 22%;}
-.grid-4-12 {width: 30.333%;}
-.grid-5-12 {width: 38.666%;}
-.grid-6-12 {width: 47%;}
-.grid-7-12 {width: 55.333%;}
-.grid-8-12 {width: 63.666%;}
-.grid-9-12 {width: 72%;}
-.grid-10-12 {width: 80.333%;}
-.grid-11-12 {width: 88.666%;}
-.grid-12-12 {width: 97%;}
-
-
-/* first item */ .formee .alpha {margin-left:0;}
-/* last item */ .formee .omega {margin-right:0;}
-/* clear */ .formee .clear {clear:both;}
-/* input without label */ .formee-no-lbl {position:relative;padding-bottom:0;}
-/* input without label */ .formee-no-lbl input,  .formee-no-lbl label,  .formee-no-lbl span,  .formee-no-lbl ul,  .formee-no-lbl p {position:absolute;bottom:0;}
-
-/* multiple containers inside field-grid */
-.formee .left {
-	clear:none;
-	float:left !important;
-	margin-right:0.3em !important;
-}
-.formee .right {
-	clear:none;
-	float:right !important;
-	margin-left:0.3em !important;
-}
-
+	fieldset {
+		border: 0;
+		position: relative;
+		height:100%;
+		padding: 0;
+		margin: 0 0 $contentBottomSpace;
+		background: none;
+	}
+	legend {
+		margin-left:1%;
+		margin-right:1%;
+		padding: 0.5% 0.5% 0.8%;
+		line-height:1.2em;
+		letter-spacing: -.035em;
+		color:#2b2b2b;
+		font-weight: normal;
+	}
+	.form-lbl, label {
+		display: block;
+		height: auto;
+		margin: 0.5em 0;
+		color:#2b2b2b;
+		line-height: 1.3em;
+		vertical-align:middle;
+	}
+	.form-txt, input[type="text"], input[type="password"], input[type="email"], input[type="file"], textarea, select {
+		vertical-align: middle;
+		line-height: 1.1em;
+		width: 100%;
+		padding:10px;
+		border-style: solid;
+		border-width: 1px;
+	}
+	textarea {
+		height: 10em;
+	}
+	select {
+		padding:9px;
+		height:2.7em;
+		border-color:#c6c6c6 #dadada #eaeaea;
+		background: #fafafa;
+		color:#999;
+	}
 
 /* form elements  */
-.formee-lbl, .formee label {
-	display: block;
-	height: auto;
-	margin: 0.2em 0 0.5em;
-}
-.formee .formee-txt, .formee input[type="text"], .formee input[type="password"], .formee input[type="file"], .formee textarea, .formee select{
-	vertical-align: middle;
-	line-height: 1.1em;
-	width: 100%;
-	padding:10px;
-	border-style: solid;
-	border-width: 1px;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-ms-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-/*ie7*/
-*width: 99%;
-}
-.formee textarea {height: 10em;}
-.formee select {padding:9px;height:2.7em;}
-.formee-list .formee-lbl, .formee-list label {
-	display: inline;
-	height: auto;
-	margin: 0.5em 0 0.8em 2px;
-}
-.formee-req {
+.formee-req:after {
+	content: "*";
 	position: relative;
 	top:3px;
+	font-weight: bold;
+	font-style:normal;
+	color:#d10000;
+	line-height: .85em;
 }
 
-.formee-msg-info, .formee-msg-warning, .formee-msg-error, .formee-msg-success {
+.form-msg-info, .form-msg-warning, .form-msg-error, .form-msg-success, .wpcf7-validation-errors, .wpcf7-not-valid-tip, .wpcf7-mail-sent-ok {
 	padding:20px 20px 15px 38px;
 	border: 1px solid #ccc;
 	display: block;
 	height: auto;
-	margin: 0 1.5% 0.8em;
+	margin: 2% 0;
 	clear:both;
 }
-.formee-msg-info li, .formee-msg-warning li, .formee-msg-error li, .formee-msg-success li {
+.form-msg-info li, .form-msg-warning li, .form-msg-error li, .form-msg-success li {
 	list-style: none;
 	padding:0;	
 	margin-bottom: .4%;
@@ -143,44 +102,110 @@ Structure
 
 
 /* form button  */
-.formee-button, .formee input[type="submit"], .formee input[type="button"], .formee input[type="reset"] {
-  padding:8px 15px 9px;
-  cursor: pointer;
-  text-align: center;
-  display:inline-block;
-  border:1px solid #D4D4D4;
+.form-button, form input[type="submit"], form input[type="button"], form input[type="reset"] {
+	padding:8px 15px 9px;
+	cursor: pointer;
+	text-align: center;
+	display:inline-block;
+	border:1px solid #D4D4D4;
 }
 
 /* lista de chk e rdo */
-.formee-list {
+.form-list {
 	height: 100%;
 	list-style: none;
 	padding:0;
 	margin:0;
-}
-.formee-list li, .formee-list li {
-	margin: 0.5em 0.6em 0.8em;
-	float:left;
-	display: inline-block;
-	list-style:none;
-}
-.formee-list input {margin-right: 0.2em}
-
-/* input size */
-.formee-small {
-	width: 30% !important;
-	float:left;
-	margin-right: 10px;
-	display:inline;
-/*ie7*/
-*width: 25% !important;
+	li {
+		margin: 0.5em 0.6em 0.8em;
+		float:left;
+		display: inline-block;
+		list-style:none;
+	}
+	input {
+		margin-right: 0.2em
+	}
+	.form-lbl, label {
+		display: inline;
+		height: auto;
+		margin: 0.5em 0 0.8em 2px;
+	}
 }
 
-.formee-medium {
-	width: 50% !important;
-	float:left;
-	margin-right: 10px;
-	display:inline;
-/*ie7*/
-*width: 45% !important;
+/* form elements  */
+form .form-txt, form input[type="text"], form input[type="password"], form input[type="email"], form input[type="file"], form textarea, form select {
+	border-color:#c6c6c6 #dadada #eaeaea;
+	background: #fafafa;
+	color:#999;
+	border-radius: 4px;
+}
+form .form-txt:hover, form input[type="text"]:hover, form input[type="password"]:hover, form input[type="file"]:hover, form textarea:hover, form select:hover {
+	color:#666;
+	background: #fff none;
+	border-color:#c6c6c6;
+}
+form .form-txt:focus, form input[type="text"]:focus, form input[type="password"]:focus, form input[type="file"]:focus, form textarea:focus, form select:focus  {
+	color:#333;
+	background: #fff none;
+	border-color:#659ec9 #70aedd #a8cfec;
+	outline: 0;
+}
+
+/* form msg status  */
+.form-msg-info, .form-msg-warning, .form-msg-error, .form-msg-success, .wpcf7-validation-errors, .wpcf7-not-valid-tip, .wpcf7-mail-sent-ok {
+	color:#2b2b2b;
+	border-radius: 4px;
+}
+.form-msg-info h3, .form-msg-warning h3, .form-msg-error h3, .form-msg-success h3, .wpcf7-validation-errors h3, .wpcf7-not-valid-tip h3, .wpcf7-mail-sent-ok h3 {
+	line-height:1.1em;
+	letter-spacing:-.02em;
+	padding:0;
+	margin:0 0 .3em 0;
+}
+.form-msg-info {
+	background: #d1ecf7 url(img/form-ic-info.png) no-repeat 12px 50%;
+	border-color:#bcdfef;
+}
+.form-msg-warning, .wpcf7-validation-errors {
+	background: #fff6bf url(img/form-ic-warning.png) no-repeat 12px 50%;
+	border-color:#fceb77;
+}
+.form-msg-error, .wpcf7-not-valid-tip {
+	background: #fad0d0 url(img/form-ic-error.png) no-repeat 12px 50%;
+	border-color:#f6abab;
+}
+.form-msg-success, .wpcf7-mail-sent-ok {
+	background: #e5f8ce url(img/form-ic-success.png) no-repeat 12px 50%;
+	border-color:#d0f1a6;
+}
+
+.form-msg-success strong, .form-msg-success a, .wpcf7-mail-sent-ok a, .wpcf7-mail-sent-ok strong {color:#62b548;}
+.form-msg-info strong, .form-msg-info a {color:#11689e;}
+.form-msg-warning strong, .form-msg-warning a, .wpcf7-not-valid-tip a, .wpcf7-not-valid-tip strong {color:#957210;}
+.form-msg-error strong, .form-msg-error a, .wpcf7-validation-errors a, .wpcf7-validation-errors strong {color:#b01717;}
+
+/* form validation */
+.formee-error {
+	border-color: #FAD0D0 !important;
+	color: #b01717 !important;
+}
+
+/* form buttons */
+.form-button, form input[type="submit"], form input[type="button"], form input[type="reset"] {
+	line-height:1.4em;
+	letter-spacing: -.015em;
+	color:#fff;
+	background:$secondary;
+	/* gradient */
+	border-radius: 7px;
+	border: 2px solid #fff;
+	font-weight: normal;
+	font-size: 13px;
+	margin: 15px 0 0 0;
+	@include background-image(linear-gradient(lighten($secondary, 15%), $secondary));
+	@include box-shadow(#999 0 0 5px 1px);
+	&:hover, &:focus {
+		@include background-image(linear-gradient(lighten($primary, 15%), $primary));
+	}
+
 }
