More alterations/optimizations
* Added global .gitignore_global file with common ignores
* removed formee.js. It's worthless
* Added drop-menus (from ryantvenge.com)
* html5shiv is now default. Have to opt into modernizer
* moved query to top of page (that's what wordpress does so let's
conform. Plus if your site ever has jQuery in the content area for some
reason, you are covered.
* Added Variables for wells and grids in scss.
* cleaned up random things in scss.
* removed chrome frame from scss and html
* Added variables for responsive breakpoints.
* Added optional date styles in wordpress.scss
* Added some empty scss files to hint at organizing blocks of the
design in different files (widgets, content).

--- a/scss/formee-structure.scss
+++ b/scss/formee-structure.scss
@@ -53,7 +53,7 @@ form {
 		line-height: 1.3em;
 		vertical-align:middle;
 	}
-	.form-txt, input[type="text"], input[type="password"], input[type="email"], input[type="file"], textarea, select {
+	.form-txt, input[type="text"], input[type="password"], input[type="email"], input[type="file"], input[type="search"], textarea {
 		vertical-align: middle;
 		line-height: 1.1em;
 		width: 100%;
@@ -65,11 +65,8 @@ form {
 		height: 10em;
 	}
 	select {
-		padding:9px;
-		height:2.7em;
-		border-color:#c6c6c6 #dadada #eaeaea;
-		background: #fafafa;
-		color:#999;
+		//height:2.7em;
+		width: 100%;
 	}
 
 /* form elements  */
@@ -133,18 +130,18 @@ form {
 }
 
 /* form elements  */
-form .form-txt, form input[type="text"], form input[type="password"], form input[type="email"], form input[type="file"], form textarea, form select {
+form .form-txt, form input[type="text"], form input[type="password"], form input[type="email"], form input[type="file"], input[type="search"], form textarea {
 	border-color:#c6c6c6 #dadada #eaeaea;
 	background: #fafafa;
 	color:#999;
 	border-radius: 4px;
 }
-form .form-txt:hover, form input[type="text"]:hover, form input[type="password"]:hover, form input[type="file"]:hover, form textarea:hover, form select:hover {
+form .form-txt:hover, form input[type="text"]:hover, form input[type="password"]:hover, form input[type="file"]:hover, form input[type="search"]:hover, form textarea:hover {
 	color:#666;
 	background: #fff none;
 	border-color:#c6c6c6;
 }
-form .form-txt:focus, form input[type="text"]:focus, form input[type="password"]:focus, form input[type="file"]:focus, form textarea:focus, form select:focus  {
+form .form-txt:focus, form input[type="text"]:focus, form input[type="password"]:focus, form input[type="file"]:focus, form input[type="search"]:hover, form textarea:focus {
 	color:#333;
 	background: #fff none;
 	border-color:#659ec9 #70aedd #a8cfec;
