--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -1,7 +1,15 @@
-@media (max-width: 650px) {
+//Right now these are set up for Desktop First design. Feel free to change to Mobile first.
+
+@media (max-width: $breakPointLarge) {
+
+}
+@media (max-width: $breakPointMedium) {
+
+}
+@media (max-width: $breakPointMedium) {
 	[class*='col-'] {
 		padding-right: 0;
 		width: 100%;
-		padding-bottom: 10px;
+		margin-bottom: 10px;
 	}
 }
