--- a/scss/vars.scss
+++ b/scss/vars.scss
@@ -2,26 +2,41 @@
  * Colors
  */ 
 
-$primary: #006666;
-$secondary: #cc6600;
+$primary: #00304a;
+$secondary: #ff9100;
 $mainColorType: #666;
 
 /*
  * Grid
  */ 
 
-$gridBottomSpace: 2%;
-$gridSideSpace: 3%;
-$gridPaddedRowSpace: 2%;
+$gridBottomSpace: 15px;
+$gridSideSpace: 15px;
+$gridPaddedRowSpace: 15px;
+$gridMaxPageWidth: 1000px;
 
+/*
+ * Wells
+ */
+
+$wellBorderColor: #dfdfdf;
+$wellBorderRadius: 4px;
+$wellBackgroundColor: #fff;
+$wellPadding: 15px;
+//pagination
+$paginationBaseLineHeight: 18px;
+
+$breakPointSmall: 400px;
+$breakPointMedium: 650px;
+$breakPointLarge: 960px;
 /*
  * Typography
  */
 
 $mainFont: Tahoma, Verdana, Segoe, sans-serif;
 // If using Open Sans via Google Fonts, uncomment line below
-// $mainFont: 'Open Sans', sans-serif;
-// NOTE: Use font-weight: 700; and font-weight: 300; instead of "bold" and "normal".
+//$mainFont: 'Open Sans', sans-serif;
+// NOTE: Use font-weight: 700; and font-weight: 400; instead of "bold" and "normal".
 
 $monospaceFont: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 
